--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@
       <h2>成果物</h2>
       <div style="display: flex;">
         <ul>
-          <li onclick="setIframe('https://script.google.com/macros/s/AKfycby5Rx2rQfcgltrTtrut_DZWKkxAgtwpKZ4133-FzqFtp-tRVfCvy68ONR5S6WvDd5PoJA/exec')">生徒に勉強を教えるサイト（データ入力中）</li>
-          <!-- <li onclick="setIframe('http://18.181.106.168/training')">計算ドリル</li> -->
-          <li onclick="setIframe('http://localhost:3000/training')">計算ドリル</li>
-          <li onclick="setIframe('')"></li>
+          <li onclick="setIframe('https://script.google.com/macros/s/AKfycby5Rx2rQfcgltrTtrut_DZWKkxAgtwpKZ4133-FzqFtp-tRVfCvy68ONR5S6WvDd5PoJA/exec')"><u>生徒に勉強を教えるサイト(データ入力中)(GAS[JS(jQuery)のFrontEnd] + AWS[RailsのBackEnd])</u></li>
+          <li onclick="setIframe('http://18.181.106.168/training')"><u>計算ドリル</u>(Rails)</li>
+          <li onclick="setIframe('https://english-story-4413.github.io/EnglishStory')"><u>英語の小説</u>(Reactのお勉強用)</li>
         </ul>
         <iframe id="iframe" src="" style="height: 50vh; width: 50vw"></iframe>
       </div>
